Clean up the header to display the logout button with correct spacing

--- a/src/main/css/header.css
+++ b/src/main/css/header.css
@@ -23,15 +23,15 @@
     text-align: center;
     padding: 5px 10px 5px 10px;
     font-size: 1em;
-    display: inline-block;
+    display: inline-flex;
     height: 30px;
     line-height: normal;
 }
 
 .submitContainers {
 	padding-right: 10px;
-    display: inline-block;
-    margin: 5px;
+    display: inline-flex;
+    margin: 10px;
     text-align: right;
     float: right;
 }
